# multiminddev

./: .coverage  .env.example  .gitignore  CLAUDE.md  LAMBDA_LABS_SETUP.md  MULTIGPU_SETUP_GUIDE.md  PHASE2.md  PHASE_4_PRP.md  README.md  README_CLEAN.md  TRAINING_GUIDE.md  colab_setup_and_demo.ipynb  configure_multigpu_tests.py  cuda_rl_system_spec.md  fixed_qlora_trainer.py  fixed_rl_training.py  fixed_rl_training_v2.py  launch_complete_cuda_training.py  launch_multi_agent_training.py  launch_verl_cuda_training.py  logs.txt  pyproject.toml  requirements-colab.txt  requirements.txt  run_kernel_gen.py  run_multigpu_integration_tests.py  run_multiturn_rl_training.py  run_phase3_integration_test.py  run_sft_training.py  run_tests.py  setup_multigpu_environment.sh  simple_rl_test.py  test_complete_system.py  test_fixes.py  test_fixes_simple.py  test_hf_model.py  verify_verl_integration.py  working_rl_training.py
.claude/: settings.local.json
.claude/commands/: primer.md
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: architecture_patterns.md  cuda_rl_system_implementation_status.md  development_commands.md  project_overview.md
PRPs/: cuda-multiturn-rl-training.md  cuda_training_requirements.md  multi-turn-cuda-kernel-generation.md  phase3-distributed-verl-production-training.md  requirements_latest.md  verl-training-pipeline-integration.md
config/: colab_config.yaml  default.yaml  grpo_dapo_training.yaml
configs/: default.yaml
data/evaluation_sets/: validation_problems.json
data/training_problems/: simple_problems.json
docker/: Dockerfile.mi300
examples/cuda_training/: enhanced_sft_warmstart.py  sft_warmstart.py  test_rl_training.py  train_cuda_agents.py  true_sft_training.py
examples/cuda_training/configs/: cuda_ppo_training.yaml
examples/verl_training/: basic_training.py
examples/verl_training/configs/: ppo_basic.yaml
requirements/: CUDA.md  INITIAL.md  PHASE3.md
scripts/: analyze_results.py  prepare_cuda_dataset.py  prepare_hip_dataset.py  remote_configure.sh  remote_install_deps.sh  remote_setup.sh  remote_test.sh  run_actual_training.py  run_all_remote.sh  run_multiturn_rl.py  run_sft_training.py  setup_test_data.py  train_and_upload.py  upload_to_huggingface.py
src/coding_framework/: __init__.py  cli.py
src/coding_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/coding_framework/agents/: __init__.py  base_agent.py  code_executor.py  code_generator.py  code_reviewer.py  cuda_generator.py  cuda_optimizer.py  cuda_tester.py  trainable_agent.py  trainable_cuda_agents.py  trainable_hip_agents.py
src/coding_framework/cuda/: __init__.py  benchmarker.py  compiler.py  fixed_compiler.py  safety_wrapper.py
src/coding_framework/data/: __init__.py  curriculum_manager.py  data_pipeline.py  sakana_loader.py
src/coding_framework/deployment/: __init__.py  ab_testing.py  deployment_manager.py  deployment_orchestrator.py  model_server.py
src/coding_framework/evaluation/: __init__.py  benchmark_manager.py  verl_evaluation_bridge.py
src/coding_framework/evaluation/evaluators/: __init__.py  base_evaluator.py  bigcodebench_evaluator.py  humaneval_evaluator.py  mbpp_evaluator.py
src/coding_framework/hip/: __init__.py  benchmarker.py  compiler.py  safety_wrapper.py
src/coding_framework/monitoring/: __init__.py  deployment_monitor.py  verl_training_monitor.py
src/coding_framework/orchestration/: __init__.py  cuda_workflow.py  supervisor.py  workflows.py
src/coding_framework/tests/: test_deployment_integration.py  test_verl_integration_comprehensive.py
src/coding_framework/training/: __init__.py  base_trainer.py  cuda_data_loader.py  curriculum_manager.py  data_loader.py  distributed_launcher.py  multi_turn_conversation.py  multi_turn_rl_trainer.py  sft_data_preparation.py  verl_integration.py  verl_multi_agent_trainer.py  verl_trainer.py
src/coding_framework/training/reward_functions/: __init__.py  base_reward.py  composite_reward.py  correctness_reward.py  cuda_performance_reward.py  efficiency_reward.py  hip_performance_reward.py  style_reward.py
src/coding_framework/utils/: __init__.py  config.py  llm_interface.py  logging_setup.py
src/coding_framework/verl_integration/: __init__.py  cuda_multi_agent_trainer.py  multi_agent_trainer.py  verl_config.py  verl_coordinator.py  verl_reward_adapter.py  verl_rl_trainer.py
src/execution/: __init__.py  compiler.py  profiler.py  sandbox.py
src/kernel_gen/: __init__.py  generator.py  prompts.py
src/operations/: __init__.py  attention.py  base.py  elementwise.py  gemm.py  normalization.py
src/rewards/: __init__.py  execution_reward.py
suggestions/: corrected_curriculum_manager.py  enhanced_sakana_loader.py  rl_training_script.py  sakana_dataset_test.py  separated_training_setup.sh  sft_training_script.py
tests/: __init__.py  conftest.py
tests/e2e/: test_cli.py
tests/integration/: test_cuda_workflow.py  test_verl_basic.py  test_verl_fixed.py  test_verl_rl_training.py  test_workflow.py
tests/performance/: test_cuda_performance.py
tests/unit/: test_agents.py  test_cuda_components.py  test_reward_functions.py  test_trainable_agents.py
tests/validation/: test_system_validation.py
