[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-framework"
version = "0.1.0"
description = "VERL + LangGraph Multi-Agent HIP/ROCm Coding Framework for AMD GPUs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MultiMindDev", email = "multiminddev@example.com"},
]
keywords = ["ai", "coding", "agents", "reinforcement-learning", "langgraph", "verl", "rocm", "hip", "amd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    # Core framework
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    # Essential ML/Training dependencies (compatible with VERL)
    "numpy<2.0.0",  # VERL constraint - prevents scipy import issues
    "pandas>=2.0.0",
    "torch>=2.1.0,<2.8.0",  # Compatible with VERL and VLLM
    "torchvision>=0.16.0,<0.25.0",
    "transformers>=4.30.0,<5.0.0",
    "datasets>=4.0.0",
    "accelerate>=0.20.0",
    "peft>=0.4.0",
    "bitsandbytes>=0.41.0",  # For QLoRA
    # VERL core dependencies
    "ray[default]>=2.10.0",
    "tensordict>=0.8.0,<=0.9.1,!=0.9.0",  # VERL constraint
    "pyarrow>=19.0.0",
    "dill",
    "codetiming",
    "hydra-core",
    "pybind11",
    "torchdata",
    # Monitoring and logging
    "structlog>=23.0.0",
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
    # Essential utilities
    "jsonlines>=3.1.0",
    "aiofiles>=23.0.0",
    "httpx>=0.24.0",
    "packaging>=20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.0.290",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

verl = [
    # VERL framework (installed via local verl directory)
    # Core VERL dependencies for RL rollouts
    "vllm>=0.7.3,<=0.9.1",  # Required for RL inference rollouts
    # Performance optimizations
    "liger-kernel",  # GPU performance
    "flash-attn",    # Attention optimization
    # Evaluation
    "math-verify",   # Math evaluation
    "trl<=0.9.6",    # TRL compatibility
]

training = [
    # All core training deps are now in main dependencies for consistency
    # Additional training-specific dependencies
    "evaluate>=0.4.0",  # Evaluation metrics
]

rocm = [
    # ROCm/HIP development and execution for AMD GPUs
    # Note: PyTorch with ROCm support should be installed separately:
    # pip install torch torchvision --index-url https://download.pytorch.org/whl/rocm6.0
    
    # Performance profiling
    "py-spy>=0.3.0",         # Python profiling
    "psutil>=5.9.0",         # System monitoring
    
    # HIP training dataset sources
    "datasets>=2.14.0",      # HuggingFace datasets
    
    # ROCm-specific tools (install via system package manager if needed)
    # rocm-smi, hipcc, etc. are provided by ROCm system installation
]

phase3 = [
    # Distributed training
    "ray[default,train,tune]>=2.8.0",    # Distributed computing with Ray Train and Ray Tune
    "torch>=2.1.0",                      # PyTorch with FSDP support
    "transformers>=4.35.0",              # HuggingFace models
    "accelerate>=0.24.0",                # FSDP integration
    
    # Evaluation benchmarks
    "datasets>=2.15.0",                  # Benchmark datasets
    "evaluate>=0.4.0",                   # Evaluation metrics
    "human-eval>=1.0.0",                 # HumanEval benchmark (if available via pip)
    
    # Monitoring and observability
    "wandb>=0.16.0",                     # Experiment tracking
    "mlflow>=2.8.0",                     # ML lifecycle management
    
    # Production deployment
    "fastapi>=0.104.0",                  # Model serving API
    "uvicorn>=0.24.0",                   # ASGI server
    "scipy>=1.11.0",                     # Statistical analysis for A/B testing
    "GPUtil>=1.4.0",                     # GPU monitoring
]

# Note: These inference backends have complex dependency conflicts
# Install separately as needed:
# pip install sglang[srt,openai]==0.4.9.post6 --pre
# pip install vllm>=0.7.3,<=0.9.1

all = [
    "coding-framework[dev,verl,training,rocm,phase3]"
]

# Note: sglang and vllm have conflicting torchvision requirements
# Use either sglang OR vllm, not both:
# uv sync --extra sglang  (for sglang backend)
# uv sync --extra vllm    (for vllm backend)

[project.urls]
Homepage = "https://github.com/multiminddev/coding-framework"
Repository = "https://github.com/multiminddev/coding-framework"
Documentation = "https://coding-framework.readthedocs.io"
"Bug Reports" = "https://github.com/multiminddev/coding-framework/issues"

[project.scripts]
coding-framework = "coding_framework.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.txt"]

# Ruff configuration
[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B018"]

[tool.ruff.lint.isort]
known-first-party = ["coding_framework"]

# MyPy configuration
[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "docker.*",
    "ray.*",
    "wandb.*",
    "langgraph.*",
    "langchain.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "--cov=src/coding_framework",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["src/coding_framework"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.8",
]
